--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "*": "pnpm format"
   },
   "devDependencies": {
+    "@types/asciichart": "^1.5.8",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.4",
+    "@types/readline-sync": "^1.4.8",
     "esbuild": "^0.23.1",
     "husky": "^9.1.5",
     "jest": "^29.7.0",
@@ -44,7 +46,12 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "asciichart": "^1.5.25",
+    "chalk": "^4.1.2",
+    "chokidar": "^3.6.0",
     "commander": "^12.1.0",
+    "date-fns": "^3.6.0",
+    "readline-sync": "^1.4.10",
     "simple-git": "^3.26.0"
   },
   "packageManager": "pnpm@9.8.0+sha512.8e4c3550fb500e808dbc30bb0ce4dd1eb614e30b1c55245f211591ec2cdf9c611cabd34e1364b42f564bd54b3945ed0f49d61d1bbf2ec9bd74b866fcdc723276"
